# Go-Game

./: .gitignore  \  go.mod  go.sum  main.go  make_wasm.sh  saving  saving.sum
assets/css/: errors.css  game.css  message.css
assets/js/: animation.js  decode.js  eventhandler.js  game.js  input.js  socket.js  testing.js  triangle.js
core/: concreteobject.go  engine.go  events.go  go.mod  interfaces.go  object.go  objects.go  physics.go
game/: arena.go  effects.go  game.go  go.mod  state.go  types.go
gamebase/: arena.go  effects.go  game.go  manager.go  state.go  types.go
handlers/: error.go  gamehandle.go  go.mod  sessions.go
middleware/: auth.go  base.go  go.mod
player/: go.mod  player.go
utils/: go.mod  message.go  passwords.go  tokens.go
views/: index.html  message.html  success.html  triangle.html
views/errors/: duplicate.html  unauthenticated.html
wasm/client/: Cargo.toml
wasm/client/src/: decoder.rs  lib.rs  triangle.rs
wasm/decoder/: Cargo.toml
wasm/decoder/src/: lib.rs
